<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Temperature Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

 <color name="white">#FFFFFF</color>
 <color name="yellow">#FFFF00</color>
 <color name="fuchsia">#FF00FF</color>
 <color name="red">#FF0000</color>
 <color name="silver">#C0C0C0</color>
 <color name="gray">#808080</color>
 <color name="olive">#808000</color>
 <color name="purple">#800080</color>
 <color name="maroon">#800000</color>
 <color name="aqua">#00FFFF</color>
 <color name="lime">#00FF00</color>
 <color name="teal">#008080</color>
 <color name="green">#008000</color>
 <color name="blue">#0000FF</color>
 <color name="navy">#000080</color>
 <color name="black">#000000</color>
 <string name="lblHeader">Temperature Reminder</string>
 <string name="lblZipCode">Zip Code:</string>
 <string name="lblAlertTime">Alert Time:</string>
 <string name="lblAlertTemp">Alert Temp:</string>
 <string name="lblHint_in_fahrenheit">In Fahrenheit</string>
 <string name="lblExpectedLow">Expected Low:</string>
 <string name="lblSetAlertTime">Set Alert Time</string>
 <string name="btnlblStartAlert">Start Alert</string>
 <string name="btnlblStopAlert">Stop Alert/Service</string>
 <string name="tvlblwarning_a_low_temperature_of_">"WARNING A LOW TEMPERATURE OF "</string>
 <string name="btnlblStopAlarm">Stop Alarm</string>
</resources>