<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/tvlblMainActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/lblHeader" />
    
    <LinearLayout
        android:id="@+id/HorizontalLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvlblMainActivity"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        >
    
	    <TextView
	        android:id="@+id/tvlblZip"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="14sp"
	        android:layout_marginTop="05dp"
	        android:layout_marginLeft="03dp"
	        android:text="@string/lblZipCode"
	        />
	 
	    <EditText
	        android:id="@+id/etZipCode"
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:inputType="number"
	        android:imeOptions="actionDone"
	        android:layout_marginLeft="55dp"
	        android:textSize="14sp"
	        android:layout_marginEnd="12dp"
	        />
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/HorizontalLayout2"
        android:layout_width="match_parent"
        android:layout_below="@+id/HorizontalLayout1"
        android:layout_height="150dp"
        android:orientation="horizontal"
        >
    
	    <TextView 
	        android:id="@+id/tvlblTimePicker"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="80dp"
	        android:layout_marginLeft="03dp"
	        android:textSize="14sp"
	        android:text="@string/lblAlertTime"/>
	
	    <TimePicker
	        android:id="@+id/timePicker1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:scaleX="0.8"
	        android:scaleY="0.8" />
    
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/HorizontalLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="140dp"
        android:layout_below="@+id/HorizontalLayout1"
        >
        
        <TextView 
            android:id="@+id/tvlblEnteredTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="03dp"
            android:textSize="14sp"
            android:text="@string/lblAlertTemp"/>
        
        <EditText 
            android:id="@+id/etAlertTemp"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:inputType="number"
            android:textSize="14sp"
            android:hint="@string/lblHint_in_fahrenheit"/>
        
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/HorizontalLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/HorizontalLayout3"
        >
        <TextView 
            android:id="@+id/tvlblExpectedTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="03dp"
            android:textSize="14sp"
            android:text="@string/lblExpectedLow"/>
        
        <TextView 
            android:id="@+id/tvExpectedTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:textSize="14sp"/>
    </LinearLayout>
    
    <LinearLayout 
        android:id="@+id/ButtonHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/HorizontalLayout4"
        >
       
        <Button 
            android:id="@+id/btnSetTime"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="06pt"
            android:textStyle="bold"
            android:text="@string/lblSetAlertTime"/>   
        
        <Button 
            android:id="@+id/btnSetAlarm"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="6pt"
            android:textStyle="bold"
            android:text="@string/btnlblStartAlert"/>
        
        <Button 
            android:id="@+id/btnStopAlarm"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:textSize="6pt"
            android:textStyle="bold"
            android:text="@string/btnlblStopAlert"/>
    </LinearLayout>
</RelativeLayout>