<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background" >
    
    
    <TextView
        android:id="@+id/tvlblAlertWindowActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/lblHeader" />
    
      <TextView 
           android:id="@+id/tvlblExpectedTemp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginLeft="03dp"
           android:layout_below="@+id/tvlblAlertWindowActivity"
           android:layout_marginTop="75dp"
           android:textSize="16sp"
           android:text="@string/tvlblwarning_a_low_temperature_of_"/>
       
       <TextView 
           android:id="@+id/tvExpectedTemp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_below="@+id/tvlblExpectedTemp"
           android:textSize="16sp"/>
    
    
      <Button 
            android:id="@+id/btnStopAlarm"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_centerInParent="true"
            android:textSize="10pt"
            android:textStyle="bold"
            android:text="@string/btnlblStopAlarm"/>   

</RelativeLayout>
